# red_bot_blue_bot

./: CMakeLists.txt  README.md  package.xml
launch/: blue_bot.launch  blue_bot.launch~  red_bot.launch  sensors_v1.launch  try_blue_bot.launch  try_red_bot.launch
scripts/: camera_centroid_and_radius_1.py  camera_centroid_and_radius_2.py  controller_splitter.py  filtering_the_map_and_finding_a_path.py  front_side_error_v1.py  front_side_error_v2.py  front_side_error_v3.py  front_ultra_error.py  front_ultra_error_v2.py  image_display.py  left_motor_measured_speed.py  left_side_error_v1.py  left_side_error_v2.py  left_side_error_v3.py  map_1.py  map_2.py  map_display.py  map_display_2.py  messing_with_numpy.py  motor_test1.py  motor_test1.py~  pan_error_v1.py  right_motor_measured_speed.py  right_side_error_v1.py  right_side_error_v2.py  right_side_error_v3.py  servo_tracking_v1.py  tele_motor_bluebot_1.py  tele_motor_redbot_1.py  tele_motor_v1.py  tele_motor_v1.py~  tele_motor_v2.py  tele_motor_v3.py  tele_motor_v4.py  tele_motor_v5.py  testing.py  testing_image_opencv.py
